<resources>
    <string name="app_name">哈喽助手</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_interest">书籍管理</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_sport">运动情况</string>
    <string name="title_activity_main">哈喽助手</string>
    <string name="title_activity_note">新建笔记</string>
    <string name="title_news_top">今日头条</string>
    <string name="title_update">更新</string>
    <string name="title_dialog">FBI WARNING</string>
    <string name="title_want_to_update">要更新吗？</string>
    <string name="today_toda_title">今日一览</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="action_settings">Settings</string>
    <string name="toast_checkUpdate">已是最新版本！</string>
    <string name="text_share">给你一个炒鸡屌的语音软件，下载地址在这~\n%s</string>
    <string name="text_share_title">分享</string>
    <string name="text_send">发送</string>
    <string name="text_dialog_sex_msg">性别改变后会对小哈的性格产生一定的影响！设置保存成功后重启APP生效，重启APP生效，重启APP生效。</string>
    <string name="text_start_record">点击开始录音</string>
    <string name="text_stop_record">结束录音</string>
    <string name="text_voice_note">正在进行语音笔记</string>
    <string name="text_no_map">没有检测到任何地图应用！</string>
    <string name="text_hello_stand_by">随时待命中。。。请勿强行杀掉后台</string>
    <string name="text_load_more">点击加载更多</string>
    <string name="text_dialog_choose_share">选择希望的分享方式</string>
    <string name="text_save_over">已保存！！！</string>
    <string name="text_save_error">保存失败，请检查网络</string>
    <string name="text_save">保存</string>
    <string name="text_girl">妹子</string>
    <string name="text_boy">帅锅</string>
    <string name="text_text_only">仅文字</string>
    <string name="text_file_only">仅录音</string>
    <string name="text_file_text">录音+文字</string>
    <string name="text_keep_screen_on">录音过程请务必让屏幕处于亮屏状态，防止被系统误杀！！！</string>
    <string name="text_delete_over">已删除！！！</string>
    <string name="text_recording">认真聆听中</string>
    <string name="text_touch_to_speak">按住说话</string>
    <string name="text_no_permission_calendar">非常抱歉，请授予日历读写权限</string>
    <string name="text_no_permission_alarm">非常抱歉，请授予闹钟设置权限</string>
    <string name="text_ingredient">准备材料：</string>
    <string name="text_steps">步骤：</string>
    <string name="text_version">版本：%s</string>
    <string name="text_cook_info">%s：\n%s</string>
    <string name="text_hello_sex">小哈性别</string>
    <string name="text_auto_backup">自动备份</string>
    <string name="text_backup_over">备份完成</string>
    <string name="text_no_restore">没有能恢复的数据</string>
    <string name="text_restore_over">云端数据恢复完成</string>
    <string name="text_backup_start">正在执行备份，请勿关闭应用！</string>
    <string name="text_restore_start">正在恢复备份，请勿关闭应用！</string>
    <string name="text_wakeup">后台唤醒</string>
    <string name="text_wakeup_mode">唤醒模式</string>
    <string name="text_wakeup_mode_order">命令式</string>
    <string name="text_wakeup_mode_call">应答试</string>
    <string name="text_update_info">更新内容：%s\n发布时间：%s</string>
    <string name="text_scan">扫描下方二维码与我们取得联系</string>
    <string name="text_cancel">取消</string>
    <string name="text_enter">确定</string>
    <string name="text_delete">删除</string>
    <string name="text_loading">处理中。。。</string>
    <string name="text_help">帮助</string>
    <string name="text_message_detail">%s说：%s</string>
    <string name="text_message_no">还没有收到短信哦</string>
    <string name="text_meaning">含义：\n%s</string>
    <string name="text_source">来源：\n%s</string>
    <string name="text_poetry_title">%s-%s（%s）</string>
    <string name="text_help_fun_item_question">问："%s"</string>
    <string name="text_help_fun_item_answer">答："%s"</string>
    <string name="text_login_error">登录出错，请稍后再试</string>
    <string name="text_login_success">登陆成功！</string>
    <string name="text_logout_success">已注销！</string>
    <string name="text_reLogin">身份已过期，请重新登录</string>
    <string name="text_contact_us">联系我们</string>
    <string name="text_days_steps">每天的步数</string>
    <string name="text_uss_energy">消耗能量：</string>
    <string name="text_uss_energy_end">大卡</string>
    <string name="text_no_have">无</string>
    <string name="text_choose_nothing">你还没有勾选！！！</string>
    <string name="text_tap_to_cancel_recording">录音中，点击停止</string>
    <string name="text_say_nothing">你好像什么都没有说</string>
    <string name="text_calling">正在拨通电话</string>
    <string name="text_no_phone_permission">请授予电话拨打权限后重试</string>
    <string name="text_call_cancel">已取消拨打</string>
    <string name="text_dialog_logout_msg">你真的要注销吗？登录状态可以享受更好的体验！</string>
    <string name="text_copyRight">CopyRight©️2017–2018</string>
    <string name="text_local_sport">近期运动情况：</string>
    <string name="text_today">今天</string>
    <string name="text_joule">焦</string>
    <string name="text_title_save">输入标题</string>
    <string name="text_title_save_hint">如：Android组3月1日会议</string>
    <string name="text_no_title">标题不能为空，请输入标题！！！</string>
    <string name="text_stop_recording">是否结束录音？</string>
    <string name="text_give_up_save">之前编辑的内容还未保存，真的要放弃保存吗？</string>
    <string name="text_diaolg_stop_recording">当前正在录音，要结束录音并退出吗？</string>
    <string name="text_ask_delete">确定要删除这条笔记？</string>
    <string name="text_should_login">必须要登录才能使用该功能，请先登录！</string>
    <string name="test_network_error">网络似乎有些不太稳定~</string>
    <string name="format_first_line">\n\u3000\u3000%s</string>
    <string name="format_date_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date">yyyy-MM-dd</string>
    <string name="exit_warn_msg">再按一次退出</string>
    <string name="book_title">语音笔记</string>
    <string name="todo_newRemind">新建提醒</string>
    <string name="todo_sportMsg">运动情况</string>
    <string name="todo_wantoSay">你想说点啥呢？</string>
    <string name="drawer_click_to_login">点击头像登录</string>
    <string name="menu_setting">设置</string>
    <string name="menu_bookmanage">书籍管理</string>
    <string name="menu_checkUpdate">检查更新</string>
    <string name="menu_aboutUs">关于</string>
    <string name="menu_share">分享</string>
    <string name="menu_exit">注销</string>
    <string name="menu_backup">备份数据</string>
    <string name="menu_restore">恢复数据</string>
    <string name="refresh_finish">刷新完毕</string>
    <string name="aiui_no_result">不好意思，我好像没听懂。。。 </string>
    <string name="symbol_about">≈</string>
    <string name="text_more_back">返回</string>
    <string name="text_more_joke">笑话</string>
    <string name="text_more_story">故事</string>
    <string name="text_more_music">音乐</string>
    <string name="text_more_news">新闻</string>
    <string name="text_more_weather">天气</string>
    <string name="text_more_food">菜谱</string>
    <string name="text_more_time">时间</string>
    <string name="text_more_radio">收音机</string>
</resources>
