<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/nav_checkUpdate"
        android:icon="@drawable/ic_menu_update"
        android:title="@string/menu_checkUpdate" />
    <item
        android:id="@+id/nav_backup"
        android:icon="@drawable/ic_menu_backup"
        android:title="@string/menu_backup" />
    <item
        android:id="@+id/nav_restore"
        android:icon="@drawable/ic_menu_restore"
        android:title="@string/menu_restore" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/menu_aboutUs" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/menu_exit" />
</menu>
